# factorio-utils

./: .gitignore  Cargo.toml  flake.nix
crates/blueprint/: Cargo.toml
crates/blueprint/examples/: decode-string.rs  render-string.rs
crates/blueprint/src/: error.rs  lib.rs
crates/blueprint/src/codec/: from_wire.rs  kind_table.rs  mod.rs  to_wire.rs
crates/blueprint/src/entity/: assembling_machine.rs  belt.rs  chest.rs  furnace.rs  inserter.rs  item_stack.rs  mining_drill.rs  mod.rs  number.rs  pipe.rs  pipe_to_ground.rs  power_pole.rs  pump.rs  splitter.rs  underground_belt.rs
crates/blueprint/src/render/: mod.rs  palette.rs  raster.rs
crates/blueprint/src/string/: codec.rs  mod.rs  version.rs
crates/blueprint/src/wire/: blueprint.rs  entity.rs  envelope.rs  filter.rs  item_stack.rs  mod.rs  position.rs
crates/blueprint/src/world/: direction.rs  entity_name.rs  mod.rs  opaque.rs  position.rs  tile_box.rs  world.rs
crates/blueprint/tests/: roundtrip_string.rs
crates/layout/: Cargo.toml
crates/layout/examples/: layout-circuits.rs  plan-and-layout.rs
crates/layout/src/: config.rs  decode.rs  error.rs  footprint.rs  lib.rs
crates/layout/src/solver/: bounds.rs  mod.rs  overlap.rs  vars.rs
crates/layout/tests/: smoke.rs
crates/planner/: Cargo.toml
crates/planner/examples/: export-dot.rs  plan-target.rs
crates/planner/src/: config.rs  error.rs  icons.rs  lib.rs  rate.rs
crates/planner/src/export/: mod.rs
crates/planner/src/export/dot/: escape.rs  label.rs  mod.rs
crates/planner/src/line/: edge.rs  mod.rs  node.rs
crates/planner/src/plan/: mod.rs  planner.rs
crates/planner/tests/: export_dot.rs  planning.rs
crates/prototypes/: Cargo.toml  build.rs
crates/prototypes/examples/: dump-database.rs
crates/prototypes/src/: error.rs  icon.rs
crates/prototypes/src/database/: mod.rs
crates/prototypes/src/dump/: energy.rs  parse.rs  raw.rs
crates/prototypes/src/machine/: mod.rs
crates/prototypes/src/recipe/: ingredient.rs
crates/prototypes/src/resource/: fluid.rs  item.rs  mod.rs
crates/recipes/: Cargo.toml
crates/recipes/examples/: dump-database.rs
crates/recipes/src/: lib.rs
crates/recipes/src/database/: mod.rs
crates/recipes/src/dump/: mod.rs  parse.rs  raw.rs
crates/recipes/src/machine/: mod.rs
crates/recipes/src/recipe/: mod.rs  product.rs
crates/recipes/src/resource/: fluid.rs  item.rs  mod.rs
