[package]
name = "blueprint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
derive_more = { version = "2.0.1", features = ["from", "into", "display"] }
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = "0.14.0"
prototypes = { path = "../prototypes" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
